<resources>
    <string name="app_name">Bix</string>
    <string name="text_example_post">Este é meu primeiro texto que estou digitando com intuito de mostrar com o layout esta funcionando.</string>
    <string name="text_example_name_user">matheus_finamor</string>
    <string name="text_screen_login_for_register">Deseja se registrar? Clique aqui</string>
    <string name="text_button_login_google">Fazer login com o Google</string>
    <string name="text_or_access">ou acesse por</string>
    <string name="text_email">e-mail</string>
    <string name="text_password">senha</string>
    <string name="text_remember_password">Esqueceu sua senha?</string>
    <string name="text_register">Não tem uma conta? <font color="#3498db">Cadastre-se</font></string>
    <string name="text_or_register">ou registre-se por</string>
    <string name="text_register_google">Registrar-se através do Google</string>
    <string name="text_confirm_password">confirme sua senha</string>
    <string name="text_create_account">Criar conta</string>
    <string name="text_enter">Entrar</string>

    <string name="text_fill_in_all_fields">Preencha todos os campos!</string>
    <string name="text_user_do_not_registered">Usuário não cadastrado!</string>
    <string name="text_email_or_password_do_not_match">Email ou senha não correspondem!</string>
    <string name="text_error_login">Erro ao fazer login!</string>
    <string name="text_error">Erro!</string>
    <string name="text_strong_password">Digite uma senha mais forte!</string>
    <string name="text_valid_email">Digite um e-mail válido!</string>
    <string name="text_registered_email">E-mail ja cadastrado!</string>
    <string name="text_error_registered">Erro ao cadastrar!</string>

    <string name="text_button_ok">OK</string>
    <string name="title_failure">Falha</string>
    <string name="title_failure_login">Falha ao fazer login</string>
    <string name="title_failure_registered">Falha no cadastrar</string>
    <string name="title_failure_account_do_not_registered">Conta não encontrada</string>

    <string name="message_unable_login">Não foi possível fazer o login, tente novamente mais tarde.</string>
    <string name="message_failure_connection">Houve uma falha de conexão com a rede, tente novamente mais tarde.</string>
    <string name="message_failure_registered">Houve uma falha ao realizar o cadastro, tente novamente mais tarde.</string>
    <string name="message_failure_login">Por favor, preencha os campos de email e senha para que o login seja efetuado.</string>

    <string name="text_button_recover">Recuperar</string>
    <string name="text_confirm_email">confirme o e-mail</string>
    <string name="text_tv_recover_screen">Digite o e-mail que deseja recuperar a senha</string>

    <string name="message_failure_reset_password">Houve uma falha ao redefinir sua senha, tente novamente mais tarde!</string>
    <string name="message_failure_generic">Houve uma falha, tente novamente mais tarde!</string>
    <string name="message_email_send">Verifique sua caixa de e-mail, caso não encontre o e-mail lá, verifique o seu <font color="#000000">lixo eletrônico</font>.</string>
    <string name="message_email_different">Os e-mails digitados não são iguais. Por favor, digite o mesmo e-mail para que se consiga fazer a confirmação do mesmo.</string>
    <string name="message_empty_fields">Preencha todos os campos para que se consiga ser feita a recuperação da senha.</string>

    <string name="title_email_send">E-mail enviado</string>
    <string name="title_email_different">E-mails diferentes</string>
    <string name="title_empty_fields">Campos vazios</string>
    <string name="text_button_google">Fazer login com o Google</string>
    <string name="title_success">Sucesso</string>
    <string name="message_account_create_success">Conta criada com sucesso!</string>
    <string name="title_feed">Feed</string>
    <string name="title_liked">Gostei</string>

    <string name="title_open">Abrir</string>
    <string name="title_close">Fechar</string>
    <string name="title_drawer_config">Configurações</string>
    <string name="title_drawer_email">Alterar email</string>
    <string name="title_drawer_password">Alterar senha</string>
    <string name="title_drawer_logout">Sair</string>
    <string name="text_current_password">Senha atual</string>
    <string name="text_new_password">Nova senha</string>
    <string name="text_confirm_new_password">Confirmar senha</string>
    <string name="text_button_update_password">Atualizar senha</string>
    <string name="title_repl_password">Alterar a senha</string>
    <string name="text_repl_password">Você deseja mesmo alterar a senha? Caso deseje, clique no botão <font color="#000000">confirmar</font>, para que seja enviado para seu email cadastrado, uma mensagem disponibilizando a troca da senha.</string>
    <string name="text_btn_conf">Confirmar</string>
    <string name="text_btn_canc">Cancelar</string>
    <string name="title_error_modify_email">Erro ao alterar o e-mail</string>
    <string name="text_error_modify_email">O e-mail e/ou a senha digitada não são iguais ao da sessão atual, por favor, verifique se o e-mail atual e senha estão corretos.</string>
    <string name="title_confir_modify_email">E-mail de confirmação</string>
    <string name="text_confirm_modify_email">Para concluir a alteração, foi enviado para o novo e-mail, uma mensagem para confirmação da troca. Por favor, verifique sua caixa de entrada, caso não encontre nada referente a troca de e-mail, verifique seu lixo eletrônico e confirme a troca dos e-mails.</string>
    <string name="text_tv_modify_email">Alterar e-mail</string>
    <string name="text_til_current_email">e-mail atual</string>
    <string name="text_til_new_email">novo e-mail</string>
    <string name="text_btn_modify">Alterar</string>


</resources>